--- a/templates/index.html
+++ b/templates/index.html
@@ -53,7 +53,7 @@
                                 <a href="javascript:;">Optimizations</a>
                                 <ul>
                                     <li><a href="intro.html">Introduction</a></li>
-                                    <li><a href="gradient%20decent.html">Gradient Decent</a></li>
+                                    <li><a href="gd.html">Gradient Decent</a></li>
                                     <li><a href="">Newton</a></li>
                                 </ul>
                             </li>
