--- a/templates/index.html
+++ b/templates/index.html
@@ -44,6 +44,17 @@
                         <ul class="nav">
                             <li class="scroll-to-section"><a href="#welcome" class="active">Home</a></li>
                             <li class="submenu">
+                                <a href="playground.html">Playground</a>
+                                <ul>
+                                    <li><a href="playground.html#Func=Gaussian">Gaussian</a></li>
+                                    <li><a href="playground.html#Func=Beale">Beale</a></li>
+                                    <li><a href="playground.html#Func=Himmelblau">Himmelblau</a></li>
+                                    <li><a href="playground.html#Func=Rosenbrock">Rosenbrock</a></li>
+                                    <li><a href="playground.html#Func=ABS">ABS</a></li>
+                                    <li><a href="playground.html#Func=Rastrigin">Rastrigin</a></li>
+                                </ul>
+                            </li>
+                            <li class="submenu">
                                 <a href="javascript:;">Introduction</a>
                                 <ul>
                                     <li><a href="deepLearning.html">Deep Learning</a></li>
@@ -157,7 +168,7 @@
                         </div>
                         <h5 class="service-title">Gradient Decent</h5>
                         <p>Our grdient decent notebook would help you learn the basics about this algorithm</p>
-                        <a href="gradient%20decent.html" class="main-button">The Notebook</a>
+                        <a href="gd.html" class="main-button">The Notebook</a>
                     </div>
                     <div class="item service-item">
                         <div class="icon">
