--- a/templates/intro.html
+++ b/templates/intro.html
@@ -44,9 +44,19 @@
                     <ul class="nav">
                         <li class="scroll-to-section"><a href="index.html">Home</a></li>
                         <li class="scroll-to-section"><a href="#course2">intro</a></li>
-                        <li class="scroll-to-section"><a href="#course">Perceptron</a></li>
                         <li class="scroll-to-section"><a href="#course4">optimize</a></li>
                         <li class="scroll-to-section"><a href="#course3">Demo</a></li>
+                        <li class="submenu">
+                            <a href="playground.html">Playground</a>
+                            <ul>
+                                <li><a href="playground.html#Func=Gaussian">Gaussian</a></li>
+                                <li><a href="playground.html#Func=Beale">Beale</a></li>
+                                <li><a href="playground.html#Func=Himmelblau">Himmelblau</a></li>
+                                <li><a href="playground.html#Func=Rosenbrock">Rosenbrock</a></li>
+                                <li><a href="playground.html#Func=ABS">ABS</a></li>
+                                <li><a href="playground.html#Func=Rastrigin">Rastrigin</a></li>
+                            </ul>
+                        </li>
                         <li class="submenu">
                             <a href="javascript:;">Introduction</a>
                             <ul>
@@ -162,7 +172,7 @@
     </section>
     <section class="section" id="course3">
         <br>
-        <center><h2>loss function</h2></center>
+        <center><h2>how to optimaize</h2></center>
         <br>
         <h5>
            The optimization process itself will be the focus of the next few chapters; it will be briefly presented here to complete the example. After we've established how the definition of L(w) allows us to properly assess the performance of our classifier, our task is to find its minimum.  
