fixed the bugs koby found
first attempt at fixing the bugs koby found without adding any additional features

--- a/templates/assets/css/templatemo-art-factory.css
+++ b/templates/assets/css/templatemo-art-factory.css
@@ -234,6 +234,24 @@ a.main-button-slider:hover {
   background-color: #0088e8;
 }
 
+div.main-button-slider {
+  font-size: 13px;
+  border-radius: 20px;
+  padding: 12px 20px;
+  background-color: #F95800;
+  text-transform: uppercase;
+  color: #fff;
+  letter-spacing: 0.25px;
+  -webkit-transition: all 0.3s ease 0s;
+  -moz-transition: all 0.3s ease 0s;
+  -o-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
+}
+
+div.main-button-slider:hover {
+  background-color: #0088e8;
+}
+
 a.main-button {
   font-size: 13px;
   border-radius: 20px;
@@ -249,6 +267,24 @@ a.main-button {
 }
 
 a.main-button:hover {
+  background-color: #0088e8;
+}
+
+div.main-button {
+  font-size: 13px;
+  border-radius: 20px;
+  padding: 12px 20px;
+  background-color: #00b4c6;
+  text-transform: uppercase;
+  color: #fff;
+  letter-spacing: 0.25px;
+  -webkit-transition: all 0.3s ease 0s;
+  -moz-transition: all 0.3s ease 0s;
+  -o-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
+}
+
+div.main-button:hover {
   background-color: #0088e8;
 }
 
@@ -997,6 +1033,11 @@ services
   background-color: #0088e8;
 }
 
+.service-item:hover .icon,
+.service-item:hover div.main-button {
+  background-color: #0088e8;
+}
+
 .service-item .icon {
   text-align: center;
   -webkit-transition: all 0.3s ease 0s;
@@ -1045,6 +1086,11 @@ services
 }
 
 .service-item a.main-button {
+  margin-top: 30px;
+  display: inline-block;
+}
+
+.service-item div.main-button {
   margin-top: 30px;
   display: inline-block;
 }
@@ -1232,6 +1278,15 @@ course
   background: linear-gradient( 135deg, rgba(0, 136, 232, 1) 0%, rgba(0, 182, 198, 1) 0%, rgba(0, 136, 232, 1) 100% );
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#0088e8', endColorstr='#0088e8', GradientType=1 );
 }
+#pg {
+	height : 92vh;
+	line-height: 200%;
+	    font-weight: 400;
+	padding: 20px 10%;
+	color: white;
+ background: linear-gradient( 135deg, rgba(0, 136, 232, 1) 0%, rgba(0, 182, 198, 1) 0%, rgba(0, 136, 232, 1) 100% );
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#0088e8', endColorstr='#0088e8', GradientType=1 );
+}
 
 /* 
 ---------------------------------------------
@@ -1327,7 +1382,7 @@ contact
 
 .contact-form input,
 .contact-form textarea {
-  color: #777;
+  color: #fff;
   font-size: 14px;
   border: none;
   outline: none;
