--- a/templates/playground.html
+++ b/templates/playground.html
@@ -98,7 +98,7 @@
 
 <!-- ***** Features Big Item Start ***** -->
 
-<section id="course2">
+<section id="pg">
     <br>
     <center><h2>Playground</h2></center>
     <br>
@@ -114,9 +114,9 @@
             <option value="ABS">ABS</option>
             <option value="Rastrigin">Rastrigin</option>
         </select>
-        <button class="main-button" name="go" onclick="changeFunc()">GO</button>
+        <button class="main-button" name="go" onclick="changeFunc()">Apply</button>
     </h5>
-    <iframe src="https://i-learn-ml.oa.r.appspot.com/Himmelblau/" width="100%" height="1000" scrolling="no" id="ifrm"> </iframe>
+    <iframe src="https://i-learn-ml.oa.r.appspot.com/Himmelblau/" width="100%" height="85%" scrolling="no" id="ifrm"> </iframe>
 </section>
 
 <script>
