--- a/templates/index.html
+++ b/templates/index.html
@@ -162,62 +162,46 @@
         <div class="container">
             <div class="row">
                 <div class="owl-carousel owl-theme">
-                    <div class="item service-item">
-                        <div class="icon">
-                            <i><img src="assets/images/gd_small.png" alt=""></i>
+                    <a href="gd.html">
+                        <div class="item service-item">
+                            <div class="icon">
+                                <i><img src="assets/images/gd_small.png" alt=""></i>
+                            </div>
+                            <h5 class="service-title">Gradient Decent</h5>
+                            <p>Our grdient decent notebook would help you learn the basics about this algorithm</p>
+                            <div class="main-button">The Notebook</div href="gd.html">
                         </div>
-                        <h5 class="service-title">Gradient Decent</h5>
-                        <p>Our grdient decent notebook would help you learn the basics about this algorithm</p>
-                        <a href="gd.html" class="main-button">The Notebook</a>
-                    </div>
-                    <div class="item service-item">
-                        <div class="icon">
-                            <i><img src="assets/images/svm_small.png" alt=""></i>
+                    </a>
+                    <a href="#">
+                        <div class="item service-item">
+                            <div class="icon">
+                                <i><img src="assets/images/svm_small.png" alt=""></i>
+                            </div>
+                            <h5 class="service-title">SVM</h5>
+                            <p>Our SVM notebook would help you learn the basics about this learning algorithm</p>
+                            <div class="main-button">The Notebook</div>
                         </div>
-                        <h5 class="service-title">SVM</h5>
-                        <p>Our SVM notebook would help you learn the basics about this learning algorithm</p>
-                        <a href="#" class="main-button">The Notebook</a>
-                    </div>
-                    <div class="item service-item">
-                        <div class="icon">
-                            <i><img src="assets/images/newton_small.png" alt=""></i>
+                    </a>
+                    <a href="#">
+                        <div class="item service-item">
+                            <div class="icon">
+                                <i><img src="assets/images/newton_small.png" alt=""></i>
+                            </div>
+                            <h5 class="service-title">Newton</h5>
+                            <p>Our Newton notebook would help you learn the basics about this optimization algorithm</p>
+                            <div class="main-button">The Notebook</div>
                         </div>
-                        <h5 class="service-title">Newton</h5>
-                        <p>Our Newton notebook would help you learn the basics about this optimization algorithm</p>
-                        <a href="#" class="main-button">The Notebook</a>
-                    </div>
-                    <div class="item service-item">
-                        <div class="icon">
-                            <i><img src="assets/images/service-icon-02.png" alt=""></i>
+                    </a>
+                    <a href="#">
+                        <div class="item service-item">
+                            <div class="icon">
+                                <i><img src="assets/images/playground.png" alt=""></i>
+                            </div>
+                            <h5 class="service-title">PlayGround</h5>
+                            <p>The PlayGround allows you to explore to your hearts content</p>
+                            <div class="main-button">The PlayGround</div>
                         </div>
-                        <h5 class="service-title">Fourth Service Box</h5>
-                        <p>Fusce sollicitudin feugiat risus, tempus faucibus arcu blandit nec. Duis auctor dolor eu scelerisque vestibulum.</p>
-                        <a href="#" class="main-button">Read More</a>
-                    </div>
-                    <div class="item service-item">
-                        <div class="icon">
-                            <i><img src="assets/images/service-icon-01.png" alt=""></i>
-                        </div>
-                        <h5 class="service-title">Fifth Service Title</h5>
-                        <p>Curabitur aliquam eget tellus id porta. Proin justo sapien, posuere suscipit tortor in, fermentum mattis elit.</p>
-                        <a href="#" class="main-button">Discover</a>
-                    </div>
-                    <div class="item service-item">
-                        <div class="icon">
-                            <i><img src="assets/images/service-icon-03.png" alt=""></i>
-                        </div>
-                        <h5 class="service-title">Sixth Box Title</h5>
-                        <p>Ut nibh velit, aliquam vitae pellentesque nec, convallis vitae lacus. Aliquam porttitor urna ut pellentesque.</p>
-                        <a href="#" class="main-button">Detail</a>
-                    </div>
-                    <div class="item service-item">
-                        <div class="icon">
-                            <i><img src="assets/images/service-icon-01.png" alt=""></i>
-                        </div>
-                        <h5 class="service-title">Seventh Title Box</h5>
-                        <p>Sed a consequat velit. Morbi lectus sapien, vestibulum et sapien sit amet, ultrices malesuada odio. Donec non quam.</p>
-                        <a href="#" class="main-button">Read More</a>
-                    </div>
+                    </a>
                 </div>
             </div>
         </div>
