--- a/templates/viewerGDpyver.html
+++ b/templates/viewerGDpyver.html
@@ -75,8 +75,8 @@
 <table>
     <tr>
         <td>
-            <button class="main-button" type="button" onclick="NextVec()">Next Step</button>
             <button class="main-button" type="button" onclick="PrevVec()">Previous Step</button>
+            <button class="main-button" type="button" onclick="NextVec()">Next Step</button>
         </td>
 
     </tr>
@@ -87,11 +87,11 @@
     <a> y: </a><input class="contact-field" id = "y" name="y" placeholder="y">
     <a>epochs:</a><input class="contact-field" id = "epochs" value ="{{epochs}}" name="epochs" placeholder="epochs">
     <select class="contact-field" id="SGD" name="opt">
-        <option value="SGD">SGD</option>
+        <option value="SGD">GD</option>
         <option value="MomentumSGD">MomentumSGD</option>
         <option value="Newton">Newton</option>
     </select>
-    <button class="main-button" name="send" type="submit">GO</button>
+    <button class="main-button" name="send" type="submit">Apply</button>
 </form>
 </div>
 <script>
@@ -378,7 +378,7 @@
 		}
 	};
 	// setting proxy:true allows interactive controls to override base position
-	var camera = mathbox.camera( { proxy: true, position: [4,2,4] } );
+	var camera = mathbox.camera( { proxy: true, position: [-4,2,-4] } );
 
 	 // save as variable to adjust later
     view = mathbox.cartesian(
