second attempt at fixing the bugs koby found

--- a/templates/gd.html
+++ b/templates/gd.html
@@ -44,14 +44,14 @@
                     <ul class="nav">
                         <li class="scroll-to-section"><a href="index.html">Home</a></li>
                         <li class="submenu">
-                            <a href="#course4">Playground</a>
+                            <a href="playground.html">Playground</a>
                             <ul>
-                                <li><a href="javascript:document.getElementById('Func').value='Gaussian';changeFunc();document.getElementById('course4').scrollIntoView();">Gaussian</a></li>
-                                <li><a href="javascript:document.getElementById('Func').value='Beale';changeFunc();document.getElementById('course4').scrollIntoView();">Beale</a></li>
-                                <li><a href="javascript:document.getElementById('Func').value='Himmelblau';changeFunc();document.getElementById('course4').scrollIntoView();">Himmelblau</a></li>
-                                <li><a href="javascript:document.getElementById('Func').value='Rosenbrock';changeFunc();document.getElementById('course4').scrollIntoView();">Rosenbrock</a></li>
-                                <li><a href="javascript:document.getElementById('Func').value='ABS';changeFunc();document.getElementById('course4').scrollIntoView();">ABS</a></li>
-                                <li><a href="javascript:document.getElementById('Func').value='Rastrigin';changeFunc();document.getElementById('course4').scrollIntoView();">Rastrigin</a></li>
+                                <li><a href="playground.html#Func=Gaussian">Gaussian</a></li>
+                                <li><a href="playground.html#Func=Beale">Beale</a></li>
+                                <li><a href="playground.html#Func=Himmelblau">Himmelblau</a></li>
+                                <li><a href="playground.html#Func=Rosenbrock">Rosenbrock</a></li>
+                                <li><a href="playground.html#Func=ABS">ABS</a></li>
+                                <li><a href="playground.html#Func=Rastrigin">Rastrigin</a></li>
                             </ul>
                         </li>
                         <li class="submenu">
