--- a/templates/viewerGDpyver.html
+++ b/templates/viewerGDpyver.html
@@ -237,7 +237,7 @@
 						var percent = (z - 0.9 * zMin) / (zMax - 0.9 * zMin);
 						var color = new THREE.Color(0xffffff);
 						color.setHSL(1 - 0.3 * percent, 1, 0.5);
-						emit(color.r*0.9, 0.0, color.b, 1.0);
+						emit(0.0, color.r*0.9, color.b, 1.0);
 					}
 			);
 		}
@@ -407,7 +407,7 @@
     var zFormat = view.format( {digits: 2, font:"Arial", weight: "bold", style: "normal", source: zScale} );
     var zTicksLabel = view.label( {color: "blue", zIndex: 0, offset:[0,0], points: zScale, text: zFormat} );
 
-	view.grid( {axes:[1,3], width: 2, divideX: 20, divideY: 20, opacity:0.25} );
+	view.grid( {axes:[1,3], width: 3, divideX: 20, divideY: 20, opacity:0.5, color:"Gray"} );
 
 	var curveData = view.area({
 		axes: [1,3], channels: 3, width: 64, height: 64,
@@ -445,7 +445,7 @@
 	});
 
 	var vec =[];
-	vec[0] = view.vector({color: "#e77f00", width: 8, end: true, visible: true, points: vecData});
+	vec[0] = view.vector({color: "#ff0000", width: 8, end: true, visible: true, points: vecData});
 	vec[1] = view.vector({color: "#00AF00", width: 8, end: true, visible: true, points: vecData});
 	vec[2] = view.vector({color: "#AFA700", width: 8, end: true, visible: true, points: vecData});
 	vec[3] = view.vector({color: "#808080", width: 8, end: true, visible: true, points: vecData});
