fixed a small bug with the color of dropdown lists

--- a/templates/assets/css/templatemo-art-factory.css
+++ b/templates/assets/css/templatemo-art-factory.css
@@ -1331,6 +1331,11 @@ contact
   color: #fff;
 }
 
+select.contact-field option.st
+{
+    background-color: #4bbbe0;
+}
+
 .contact-form {
   padding: 0px;
   background: rgba(0, 136, 232, 1);
