--- a/templates/playground.html
+++ b/templates/playground.html
@@ -105,12 +105,12 @@
         choose which function you would like to try Gradient Descent on:
 
         <select class="contact-field" id="Func" name="opt">
-            <option value="Gaussian">Gaussian</option>
-            <option value="Beale">Beale</option>
-            <option value="Himmelblau">Himmelblau</option>
-            <option value="Rosenbrock">Rosenbrock</option>
-            <option value="ABS">ABS</option>
-            <option value="Rastrigin">Rastrigin</option>
+            <option class="st" value="Gaussian">Gaussian</option>
+            <option class="st" value="Beale">Beale</option>
+            <option class="st" value="Himmelblau">Himmelblau</option>
+            <option class="st" value="Rosenbrock">Rosenbrock</option>
+            <option class="st" value="ABS">ABS</option>
+            <option class="st" value="Rastrigin">Rastrigin</option>
         </select>
         <button class="main-button" name="go" onclick="changeFunc()">Apply</button>
     </h5>
