--- a/templates/viewerGDpyver.html
+++ b/templates/viewerGDpyver.html
@@ -87,9 +87,9 @@
     <a> y: </a><input class="contact-field" id = "y" name="y" placeholder="y">
     <a>epochs:</a><input class="contact-field" id = "epochs" value ="{{epochs}}" name="epochs" placeholder="epochs">
     <select class="contact-field" id="SGD" name="opt">
-        <option value="SGD">GD</option>
-        <option value="MomentumSGD">MomentumSGD</option>
-        <option value="Newton">Newton</option>
+        <option class="st" value="SGD">GD</option>
+        <option class="st" value="MomentumSGD">MomentumSGD</option>
+        <option class="st" value="Newton">Newton</option>
     </select>
     <button class="main-button" name="send" type="submit">Apply</button>
 </form>
