--- a/templates/assets/css/templatemo-art-factory.css
+++ b/templates/assets/css/templatemo-art-factory.css
@@ -789,6 +789,7 @@ TRY IT ... with or without CENTER CENTER
   width: 100%;
   height: 18vh;
   margin-top: -10vh;
+  min-height: 80px;
 }
 
 .welcome-area .header-text {
