removed newton from index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -168,7 +168,7 @@
                             </div>
                             <h5 class="service-title">Gradient Decent</h5>
                             <p>Our grdient decent notebook would help you learn the basics about this algorithm</p>
-                            <div class="main-button">The Notebook</div href="gd.html">
+                            <div class="main-button">The Notebook</div>
                         </div>
                     </a>
                     <a href="#">
@@ -181,6 +181,7 @@
                             <div class="main-button">The Notebook</div>
                         </div>
                     </a>
+                    <!--
                     <a href="#">
                         <div class="item service-item">
                             <div class="icon">
@@ -191,7 +192,8 @@
                             <div class="main-button">The Notebook</div>
                         </div>
                     </a>
-                    <a href="#">
+                    -->
+                    <a href="playground.html">
                         <div class="item service-item">
                             <div class="icon">
                                 <i><img src="assets/images/playground.png" alt=""></i>
