--- a/templates/viewerGDpyver.html
+++ b/templates/viewerGDpyver.html
@@ -378,7 +378,7 @@
 		}
 	};
 	// setting proxy:true allows interactive controls to override base position
-	var camera = mathbox.camera( { proxy: true, position: [-3,2,-3],scale:[1.5,1.5] } );
+	var camera = mathbox.camera( { proxy: true, position: [-3,2,-3] } );
 
 	 // save as variable to adjust later
     view = mathbox.cartesian(
