--- a/templates/viewerSVMpyver.html
+++ b/templates/viewerSVMpyver.html
@@ -194,7 +194,7 @@
     var zFormat = view.format( {digits: 2, font:"Arial", weight: "bold", style: "normal", source: zScale} );
     var zTicksLabel = view.label( {color: "blue", zIndex: 0, offset:[0,0], points: zScale, text: zFormat} );
 
-    view.grid( {axes:[1,3], width: 3, divideX: 20, divideY: 20, acity:0.5, color:"Gray"} );
+    view.grid( {axes:[1,3], width: 3, divideX: 20, divideY: 20, opacity:0.5, color:"Gray"} );
 
     var pointData = view.array({
         width: 1, items: 0, channels: 3,
