fixed bugs and broken links and added svm page

--- a/templates/deepLearning.html
+++ b/templates/deepLearning.html
@@ -64,13 +64,13 @@
                             <a href="javascript:;">Optimizations</a>
                             <ul>
                                 <li><a href="intro.html">Introduction</a></li>
-                                <li><a href="gd.html">Gradient Decent</a></li>
+                                <li><a href="gd.html">Gradient Decent</a></li>s
                             </ul>
                         </li>
                         <li class="submenu">
                             <a href="javascript:;">Learning</a>
                             <ul>
-                                <li><a href="">SVM</a></li>
+                                <li><a href="svm.html">SVM</a></li>
                             </ul>
                         </li>
                     </ul>
