--- a/templates/index.html
+++ b/templates/index.html
@@ -70,7 +70,7 @@
                             <li class="submenu">
                                 <a href="javascript:;">Learning</a>
                                 <ul>
-                                    <li><a href="">SVM</a></li>
+                                    <li><a href="svm.html">SVM</a></li>
                                 </ul>
                             </li>
                         </ul>
@@ -171,7 +171,7 @@
                             <div class="main-button">The Notebook</div>
                         </div>
                     </a>
-                    <a href="#">
+                    <a href="svm.html">
                         <div class="item service-item">
                             <div class="icon">
                                 <i><img src="assets/images/svm_small.png" alt=""></i>
