--- a/templates/svm.html
+++ b/templates/svm.html
@@ -44,14 +44,14 @@
                     <ul class="nav">
                         <li class="scroll-to-section"><a href="index.html">Home</a></li>
                         <li class="submenu">
-                            <a href="playground.html">Playground</a>
+                            <a href="#course4">SVM</a>
                             <ul>
-                                <li><a href="playground.html#Func=Gaussian">Gaussian</a></li>
-                                <li><a href="playground.html#Func=Beale">Beale</a></li>
-                                <li><a href="playground.html#Func=Himmelblau">Himmelblau</a></li>
-                                <li><a href="playground.html#Func=Rosenbrock">Rosenbrock</a></li>
-                                <li><a href="playground.html#Func=ABS">ABS</a></li>
-                                <li><a href="playground.html#Func=Rastrigin">Rastrigin</a></li>
+                                <li><a href="javascript:document.getElementById('Func').value='Gaussian';changeFunc();document.getElementById('course4').scrollIntoView();">Gaussian</a></li>
+                                <li><a href="javascript:document.getElementById('Func').value='Beale';changeFunc();document.getElementById('course4').scrollIntoView();">Beale</a></li>
+                                <li><a href="javascript:document.getElementById('Func').value='Himmelblau';changeFunc();document.getElementById('course4').scrollIntoView();">Himmelblau</a></li>
+                                <li><a href="javascript:document.getElementById('Func').value='Rosenbrock';changeFunc();document.getElementById('course4').scrollIntoView();">Rosenbrock</a></li>
+                                <li><a href="javascript:document.getElementById('Func').value='ABS';changeFunc();document.getElementById('course4').scrollIntoView();">ABS</a></li>
+                                <li><a href="javascript:document.getElementById('Func').value='Rastrigin';changeFunc();document.getElementById('course4').scrollIntoView();">Rastrigin</a></li>
                             </ul>
                         </li>
                         <li class="submenu">
@@ -95,41 +95,12 @@
 
 <!-- ***** Features Big Item Start ***** -->
 
-<section id="course2">
+<section id="pg">
     <br>
-               <center> <h2>Overview</h2></center>
-                <h5>we are now ready to present Gradient Descent (GD) in more detail. GD is the most basic optimization algorithm; most ML-related optimizations rely on some variant of GD. As noted in the previous section, the gradient points in the direction of steepest descent, and thus reversed gradient points in the direction of steepest descent. To illustrate this, run the following demonstration:               </h5>
-                <iframe src="https://i-learn-ml.oa.r.appspot.com/Rosenbrock/" width="100%" height="700" scrolling="no"> </iframe>
-                <h5>One can easily observe that the arrows in this demo point exactly 'downhill' from wherever we are on the surface – this is the direction of the gradient, and this is we calculated those arrows to for this illustration. </h5>
-        <br>
+    <center><h2>SVM</h2></center>
+    <br>
+    <iframe src="https://i-learn-ml.oa.r.appspot.com/SVM/" width="100%" height="85%" scrolling="no" id="ifrm"> </iframe>
 </section>
-    <section class="section" id="course">
-        <br>
-        <br>
-        <center><h2>Step size</h2></center>
-        <br>
-
-                <h5>
-                   So, if we already have an exact mathematical expression of the for direction of steepest descent from current point w_t, why didn't we calculate the expression:
-                </h5>
-                <img src="assets/images/wt1wt.png">
-                <h5>
-                    In other words, why don't we simply take 'step size' coefficient of 1? The reason is that the size, rather than merely the direction, of the gradient at out current point may cause us to overshoot the target if we use this expression; it may place us at next stop may not even lead to a decrease in the loss function value.                </h5>
-            <img src="assets/images/madness.png">
-            <br><h5 style="text-align:center;">Figure 1: step size madness</h5><br> 
-            <h5>For example, the wild jumps from one end of the surface to the other we observe figure (1) are only the result of selecting a learning rate of 0.02, not even 1 as we've suggested. Let's reduce the step size dramatically and see what happens:</h5><br> 
-            <br>
-            <img src="assets/images/tempered.png">
-            <br><h5 style="text-align:center;">Figure 2: the better-tempered step size</h5><br> 
-            <h5>So how should the step size be selected? So far, we've only discussed constant step size. The index on the step size coefficient suggests that there are methods that calculate the step size every iteration according to certain criteria; we will address that concept later.</h5>
-            <h5>One question about the previous that we are still curious about – what does the descent over the loss function looks like on the actual surface of the loss function? The perceptron loss function we presented is a rather poor choice for visual demonstration, so let's solve the same classification problem with a different loss function – linear regression*:</h5>
-            <img src="assets/images/lwwt.png">
-            <div style="display:inline;">
-            <h5>(*) we scaled our data points, to make <img src="assets/images/wtx.png"> for the demonstration.</h5>
-            <div>
-    </section>
- 
-
 
 <script>
     var changeFunc= function(){
@@ -138,7 +109,14 @@
         var ifrm = document.getElementById('ifrm');
         ifrm.src = url+func;
     }
-
+    var hashParams = window.location.hash;
+    hashParams = hashParams.substr(1).split('&');// substr(1) to remove the `#`
+    for (var i = 0; i < hashParams.length; i++) {
+        var p = hashParams[i].split('=');
+        if (p[0]!= null) {
+            document.getElementById(p[0]).value = decodeURIComponent(p[1]);
+        }
+    }
 </script>
 
 <!-- jQuery -->
