--- a/templates/svm.html
+++ b/templates/svm.html
@@ -44,7 +44,7 @@
                     <ul class="nav">
                         <li class="scroll-to-section"><a href="index.html">Home</a></li>
                         <li class="submenu">
-                            <a href="#course4">SVM</a>
+                            <a href="#course4">Playground</a>
                             <ul>
                                 <li><a href="javascript:document.getElementById('Func').value='Gaussian';changeFunc();document.getElementById('course4').scrollIntoView();">Gaussian</a></li>
                                 <li><a href="javascript:document.getElementById('Func').value='Beale';changeFunc();document.getElementById('course4').scrollIntoView();">Beale</a></li>
@@ -70,7 +70,7 @@
                         <li class="submenu">
                             <a href="javascript:;">Learning</a>
                             <ul>
-                                <li><a href="svm.html">SVM</a></li>
+                                <li><a href="svm.htmls">SVM</a></li>
                             </ul>
                         </li>
                     </ul>
