added camera set after every click

--- a/templates/viewerGDpyver.html
+++ b/templates/viewerGDpyver.html
@@ -321,6 +321,7 @@
 							color: "white", width: 8, end: true, visible: true, points: vecData
 						}));
 					}
+                camera.set("position",[-3,2,-3]);
 			}
 		}
 			displayTrace = !displayTrace;
@@ -363,6 +364,7 @@
 
 						}
 					}
+            camera.set("position",[-3,2,-3]);
 			}
 			displayTrace = !displayTrace;
 		if(currCurveNum==0){
