--- a/templates/viewerGDpyver.html
+++ b/templates/viewerGDpyver.html
@@ -83,17 +83,17 @@
 </table>
 <form action="/{{func}}/" methhods=['POST']>
     <a> learning rate: </a><input class="contact-field" name="lr" value ="{{lr}}" placeholder="learning rate">
-    <a> x: </a><input class="contact-field" id = "x" name="x" placeholder="x">
-    <a> y: </a><input class="contact-field" id = "y" name="y" placeholder="y">
-    <a>epochs:</a><input class="contact-field" id = "epochs" value ="{{epochs}}" name="epochs" placeholder="epochs">
+    <a> x: </a><input class="contact-field" id = "x" name="x" placeholder="x" disabled>
+    <a> y: </a><input class="contact-field" id = "y" name="y" placeholder="y" disabled>
+    <a>epochs:</a><input class="contact-field" id = "epochs" value ="{{epochs}}" name="epochs" placeholder="epochs" type="number" min="1" step="1">
     <select class="contact-field" id="SGD" name="opt">
         <option class="st" value="SGD">GD</option>
         <option class="st" value="MomentumSGD">MomentumSGD</option>
         <option class="st" value="Newton">Newton</option>
     </select>
     <button class="main-button" name="send" type="submit">Apply</button><br>
-    <a> x: </a><input type="range" min="1" max="100" value="0" class="slider" id="x_slider">
-    <a> y: </a><input type="range" min="1" max="100" value="0" class="slider" id="y_slider">
+    <a> x: </a><input type="range" min="1" max="100" value="0" class="slider" id="x_slider" step="0.05">
+    <a> y: </a><input type="range" min="1" max="100" value="0" class="slider" id="y_slider" step="0.05">
 </form>
 </div>
 <script>
@@ -329,7 +329,7 @@
 							color: "white", width: 8, end: true, visible: true, points: vecData
 						}));
 					}
-                camera.set("position",[(0-f_start[0]),f_start[2],(0-f_start[1])]);
+                camera.set("position",[((0-f_start[0])/4),(f_start[2]*2),((0-f_start[1])/4)]);
 			}
 		}
 			displayTrace = !displayTrace;
@@ -374,7 +374,7 @@
 
 						}
 					}
-            camera.set("position",[(0-f_start[0]),f_start[2],(0-f_start[1])]);
+            camera.set("position",[((0-f_start[0])/4),(f_start[2]*2),((0-f_start[1])/4)]);
 			}
 			displayTrace = !displayTrace;
 		if(currCurveNum==0){
